Wed Aug 01 14:45:41 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection_doctest2.txt: Test for multiple facet
	  values in a single document (currently fails, due to this not
	  being supported correctly yet)

Wed Aug 01 14:23:24 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection_doctest2.txt: More tests, including a
	  regression test for bug with facet calculation on database with
	  no facet fields defined.

Wed Aug 01 12:43:57 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection_doctest2.txt: Improve test coverage.

Wed Aug 01 12:28:48 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Fix bug when facet calculation is
	  requested, but no facet fields are present in the database (used
	  to throw an exception when the list of suggested facets was
	  requested in this case - now it just returns an empty list).

Tue Jul 31 08:34:49 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/indexerconnection_doctest2.txt,secore/searchconnection.py,
	  secore/searchconnection_doctest3.txt: Improve test coverage - in
	  particular, add tests of various conditions which cause errors.

Mon Jul 30 16:10:52 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/datastructures.py,secore/datastructures_doctest1.txt:
	  Add test for terms which are too long, and note in the code about
	  why this restriction exists, and how it could be removed.

Mon Jul 30 14:29:51 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Update test for displaying a facet range.

Mon Jul 30 14:29:08 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Update documentation comment for
	  query_facet() method.

Mon Jul 30 12:38:25 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Fix bug with handling of facets of
	  type 'float'.
