@@ -1,3 +1,11 @@
+Sat Aug 04 03:09:32 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* docs/introduction.rst,secore/: Reorganise field structures,
+	  allowing us to support multiple occurrences of facets of string
+	  type for a single document.  This change requires all databases
+	  to be rebuilt.  Tests updated accoringly.  Also, requires latest
+	  SVN HEAD build of xapian.
+
 Wed Aug 01 14:45:41 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/searchconnection_doctest2.txt: Test for multiple facet
